--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 aiosqlite = "^0.20.0"
 disnake = "^2.9.1"
 requests = "^2.31.0"
+praw = "7.7.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
