--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 praw==7.7.1
 prawcore==2.4.0
-requests==2.32.2
+requests==2.32.3
+discord.py==2.3.2
 youtube-search-python==1.6.6
-yt-dlp==2024.4.9
+yt-dlp==2024.8.1
+PyNaCl==1.5.0
