--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-praw==7.8.1
-prawcore==2.4.0
-requests==2.32.3
-discord.py==2.3.2
-youtube-search-python==1.6.6
-yt-dlp==2024.8.1
-PyNaCl==1.5.0
-beautifulsoup4==4.12.3
-python-dotenv==1.0.1
+praw
+prawcore
+requests
+discord.py
+yt-dlp
+PyNaCl
+beautifulsoup4
+python-dotenv
+audioop-lts
